--- a/index.html
+++ b/index.html
@@ -3,15 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>checkpoint</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav>
+        <h2>logo</h2>
         <section>home</section>
         <section>about</section>
         <section>work</section>
         <section>resume</section>
         <section>contact</section>
     </nav>
+    <div>
+        <p>La Tunisie est un pays d'Afrique du Nord situé sur la côte méditerranéenne et en bordure du désert du Sahara. Le musée national du Bardo à Tunis, la capitale, expose des pièces archéologiques allant des mosaïques romaines à l'art islamique. Le quartier de la Médina, avec son souk animé, encercle l'imposante mosquée Zitouna. À l'est, sur le site de l'ancienne cité de Carthage, se trouvent les thermes d'Antonin et d'autres ruines, et le musée national de Carthage et ses nombreux objets. </p>
+    <br><br><br><br>
+        <img src="https://idwey.tn/uploads/0000/233/2024/06/11/ribat-sousse-ou-aller-en-tunisie-itineraire.jpg" alt="not found">
+    </div>
 </body>
 </html>
